packages/TeamYousef/TeamYousef-1.1.tar.gz/TeamYousef-1.1/tests/programs/syntax_errors/IndentationErroring.py
#The Encoded By Sajad



def f():
   x
    y
